--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:theme="@style/Theme.NewTineProject"
         tools:targetApi="31">
         <activity
+            android:name=".Achievement_Activity"
+            android:exported="false"
+            android:label="@string/title_activity_achievement"
+            android:theme="@style/Theme.NewTineProject" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
