--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:roundIcon="@mipmap/newtine_splash_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewTineProject"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
         <activity
